syntax = "proto3";

package api.v1;

import "api/v1/message.proto";
option go_package = "github.com/SimifiniiCTO/simfiny-financial-integration-service/generate/api/v1";
import "validate/validate.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


// CreateUserProfileRequest: Represents the request object invoked against the user
// service to create a user profile
message CreateUserProfileRequest {
  // User profile to create
  // Validations:
  // - cannot be nil hence required
  UserProfile profile = 1 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

// CreateUserProfileResponse: Represents the response object returned as a response to
// the `create user profile` request
message CreateUserProfileResponse {
  uint64 user_id = 1;
}

// GetUserProfileRequest: Represents the request object invoked against the user
// service to get a user profile
message GetUserProfileRequest {
  // The account ID associated with the user.
  // NOTE: This user_id is the simfiny backend platform wide user id
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

// GetUserProfileResponse: Represents the response object returned as a response to
// the `get user profile` request
message GetUserProfileResponse {
  UserProfile profile = 1;
}

// UpdateUserProfileRequest: Represents the request object invoked against the user
// service to delete a user profile
message DeleteUserProfileRequest {
  // The account ID associated with the user.
  // NOTE: This user_id is the simfiny backend platform wide user id
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

// DeleteUserProfileResponse: Represents the response object returned as a response to
// the `delete user profile` request
message DeleteUserProfileResponse {
  bool profile_deleted = 1;
}

// UpdateUserProfileRequest: Represents the request object invoked against the user
// service to update a user profile
message UpdateUserProfileRequest {
  // User profile to update
  // Validation:
  // - cannot nil hence required
  UserProfile profile = 1 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

// UpdateUserProfileResponse: Represents the response object returned as a response to
// the `update user profile` request
message UpdateUserProfileResponse {
  bool profile_updated = 1;
  UserProfile profile = 2;
}

// CreateBankAccountRequest: Represents the request object invoked against the financial
// service to create a bank account for a given user
message CreateBankAccountRequest {
  // The account ID associated with the user
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The bank account to create
  // Validations:
  // - cannot be nil hence required
  BankAccount bank_account = 2 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

// CreateBankAccountResponse: Represents the response object returned as a response to
// the `create bank account` request
message CreateBankAccountResponse {
  // The bank account id
  uint64 bank_account_id = 1;
}

// GetBankAccountRequest: Represents the request object invoked against the financial
// service to get a bank account for a given user and bank account id
message GetBankAccountRequest {
  // The account ID associated with the user
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The bank account id
  // Validations:
  // - bank_account_id must be greater than 0
  uint64 bank_account_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

// GetBankAccountResponse: Represents the response object returned as a response to
// the `get bank account` request
message GetBankAccountResponse {
  // The bank account
  BankAccount bank_account = 1;
}

message DeleteBankAccountRequest {
  // The account ID associated with the user
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The bank account id
  // Validations:
  // - bank_account_id must be greater than 0
  uint64 bank_account_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteBankAccountResponse {
  // The bank account id
  bool deleted = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"true\""
    } 
  ];
}

message UpdateBankAccountRequest {
  // The account ID associated with the user
  // Validations:
  // - user_id must be greater than 0
  uint64 user_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The bank account id
  // Validations:
  // - bank_account_id must be greater than 0
  uint64 bank_account_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The bank account to update
  // Validations:
  // - cannot be nil hence required
  BankAccount bank_account = 3 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateBankAccountResponse {
  // The bank account id
  bool updated = 1;
  // The bank account
  BankAccount bank_account = 2;
}

message GetPocketRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetPocketResponse {
  // The pocket account
  Pocket pocket = 1;
}

message GetSmartGoalsByPocketIdRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetSmartGoalsByPocketIdResponse {
  // The smart goals
  repeated SmartGoal smart_goals = 1;
}

message CreateSmartGoalRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The smart goal to create
  // Validations:
  // - cannot be nil hence required
  SmartGoal smart_goal = 2 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateSmartGoalResponse {
  // The smart goal id
  uint64 smart_goal_id = 1;
}

message UpdateSmartGoalRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The smart goal to update
  // Validations:
  // - cannot be nil hence required
  SmartGoal smart_goal = 3 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateSmartGoalResponse {
  // The smart goal id
  uint64 smart_goal_id = 1;
}

message DeleteSmartGoalRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteSmartGoalResponse {
  // The smart goal id
  bool deleted = 1;
}

message CreateMilestoneRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The milestone to create
  // Validations:
  // - cannot be nil hence required
  Milestone milestone = 2 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateMilestoneResponse {
  // The milestone id
  uint64 milestone_id = 1;
}

message DeleteMilestoneRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The milestone id
  // Validations:
  // - milestone_id must be greater than 0
  uint64 milestone_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteMilestoneResponse {
  // The milestone id
  bool deleted = 1;
}

message UpdateMilestoneRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The milestone id
  // Validations:
  // - milestone_id must be greater than 0
  uint64 milestone_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The milestone to update
  // Validations:
  // - cannot be nil hence required
  Milestone milestone = 3 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateMilestoneResponse {
  // The milestone id
  Milestone milestone = 1;
}

message GetMilestonesBySmartGoalIdRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetMilestonesBySmartGoalIdResponse {
  // The milestones
  repeated Milestone milestones = 1;
}

message GetMilestoneRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  // The milestone id
  // Validations:
  // - milestone_id must be greater than 0
  uint64 milestone_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetMilestoneResponse {
  // The milestone
  Milestone milestone = 1;
}

message GetForecastRequest {
  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetForecastResponse {
  // The forecast
  Forecast forecast = 1;
}

message CreateBudgetRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];

  // The milestone to associate this budget with
  uint64 milestrone_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];

  // The budget to create
  // Validations:
  // - cannot be nil hence required
  Budget budget = 3 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CreateBudgetResponse {
  // The budget id
  uint64 budget_id = 1;
}

message UpdateBudgetRequest {
  // The budget id
  // Validations:
  // - budget_id must be greater than 0
  uint64 budget_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];

  // The budget to update
  // Validations:
  // - cannot be nil hence required
  Budget budget = 2 [
    (validate.rules).message.required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateBudgetResponse {
  // The budget id
  Budget budget = 1;
}

message DeleteBudgetRequest {
  // The budget id
  // Validations:
  // - budget_id must be greater than 0
  uint64 budget_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteBudgetResponse {
  // The budget id
  bool deleted = 1;
}

message GetBudgetRequest {
  // The budget id
  // Validations:
  // - budget_id must be greater than 0
  uint64 budget_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetBudgetResponse {
  // The budget
  Budget budget = 1;
}

message GetAllBudgetsRequest {
  // The pocket account id
  // Validations:
  // - pocket_account_id must be greater than 0
  uint64 pocket_id = 1 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];

  // The smart goal id
  // Validations:
  // - smart_goal_id must be greater than 0
  uint64 smart_goal_id = 2 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];

  // The milestone id
  // Validations:
  // - milestone_id must be greater than 0
  uint64 milestone_id = 3 [
    (validate.rules).uint64.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message GetAllBudgetsResponse {
  // The budgets
  repeated Budget budgets = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  bool healthy = 1;
}

message ReadynessCheckRequest {}

message ReadynessCheckResponse {
  bool healthy = 1;
}
